Adding some structure and first steps into html-css

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <base href="/">
-    <title>React Webpack</title>
+    <title>Extravarius</title>
 </head>
-<body>
-
+<body style="margin: 0">
     <div id="root"></div>
     <script src="js/bundle.min.js"></script>
-
 </body>
 </html>
