--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <base href="/">
     <title>Extravarius</title>
+   <!-- <link rel="stylesheet" type="text/css" href="styles.css"> !-->
 </head>
 <body style="margin: 0">
     <div id="root"></div>
